--- a/src/app/post-preview/post-preview.component.html
+++ b/src/app/post-preview/post-preview.component.html
@@ -11,13 +11,8 @@
     |========================================================================-->
     <span class="name blink-font">{{ post.author.name }}</span>
 
-    <!--=======================================================================|
-    | Blue Path                                                                |
-    |==========================================================================|
-    | Una vez tengas creado el pipe FromNowPipe, úsalo con la fecha de         |
-    | publicación.                                                             |
-    |========================================================================-->
-    <span class="date">{{ post.publicationDate }}</span>
+    <!-- Aplicamos el PIPE fromNow que hemos implementado -->
+    <span class="date">{{ post.publicationDate | fromNow }}</span>
 
   </div>
 </div>
