Se realiza el Green Path que permite ver el detalle de un post cuando se pulsa sobre el en la lista de post's

--- a/src/app/post-details/post-details.component.html
+++ b/src/app/post-details/post-details.component.html
@@ -13,7 +13,7 @@
       <span class="name blink-font">{{ post.author.name }}</span>
       
       <!-- Aplicamos el PIPE fromNow que hemos implementado -->
-      <span class="date">Fiestaaa{{ post.publicationDate | fromNow }}</span>
+      <span class="date">{{ post.publicationDate | fromNow }}</span>
 
     </div>
   </div>
