--- a/src/app/post-preview/post-preview.component.html
+++ b/src/app/post-preview/post-preview.component.html
@@ -17,12 +17,9 @@
   </div>
 </div>
 
-<!--=======================================================================|
-| Green Path                                                               |
-|==========================================================================|
-| Un clic sobre el post debería enviar un evento al componente padre.      |
-|========================================================================-->
-<div class="post">
+<!-- Se crea un evento 'click' asociado a la pulsacion sobre el post, este click
+     se asocia al manejador 'notificarPostPulsado' y pasamos el ID del post que se ha pulsado -->
+<div class="post" (click)= "notificarPostPulsado(post.id)">
   <h3>{{ post.title }}</h3>
   <img *ngIf="post.media" [src]="post.media" class="u-max-full-width">
   <div class="html-text" [innerHtml]="plainTextToHtml(post.intro)"></div>
