--- a/src/app/posts-list/posts-list.component.html
+++ b/src/app/posts-list/posts-list.component.html
@@ -6,11 +6,10 @@
 | en él para notificar los clics sobre los autores de los posts.           |
 |========================================================================-->
 
-<!--=======================================================================|
-| Green Path                                                               |
-|==========================================================================|
-| Suscribe el componente PostPreviewComponent al evento que hayas definido |
-| en él para notificar los clics sobre los posts.                          |
-|========================================================================-->
-
-<app-post-preview *ngFor="let post of posts" [post]="post"></app-post-preview>
+<!-- Suscribimos el componente al evento 'postPulsado' que ha generado el hijo 
+y le asignamos el manejador 'verDetallePost($event)',tambien recibe lo que el hijo
+le haya enviado gracias a '$event', en este caso il ID del post pulsado -->
+<app-post-preview *ngFor="let post of posts" 
+    [post]="post"
+    (postPulsado)="verDetallePost($event)" >
+</app-post-preview>
