--- a/src/app/category-box/category-box.component.html
+++ b/src/app/category-box/category-box.component.html
@@ -5,7 +5,8 @@
   |==========================================================================|
   | Un clic sobre la categoría debería enviar un evento al componente padre. |
   |========================================================================-->
-  <span class="blink-font" *ngFor="let category of categories">
+  <span class="blink-font" *ngFor="let category of categories"
+    (click)= "notificarCategoriaPulsada(category.id)">
     {{ category.name }}
   </span>
 
