Se reallizan los dos últimos Path's obligatorios, Yellow Path y Purple Path

--- a/src/app/category-box/category-box.component.html
+++ b/src/app/category-box/category-box.component.html
@@ -1,10 +1,5 @@
 <div>
-
-  <!--=======================================================================|
-  | Yellow Path                                                              |
-  |==========================================================================|
-  | Un clic sobre la categoría debería enviar un evento al componente padre. |
-  |========================================================================-->
+  <!-- Se añade un evento 'click' para notificar que se ha pulsado la categoria del Post -->
   <span class="blink-font" *ngFor="let category of categories"
     (click)= "notificarCategoriaPulsada(category.id)">
     {{ category.name }}
