--- a/src/app/header-bar/header-bar.component.html
+++ b/src/app/header-bar/header-bar.component.html
@@ -3,14 +3,9 @@
     <app-search-box></app-search-box>
   </div>
   <div class="u-pull-right action-link">
-
-    <!--=======================================================================|
-    | Purple Path                                                              |
-    |==========================================================================|
-    | Modifica el enlace para que al hacer clic sobre él navegue a             |
-    | '/new-story'.                                                            |
-    |========================================================================-->
-    <a>Escribe una historia</a>
+    
+    <!-- A través de 'routerLink' redirigimos el enlace a la página que contiene el formulario -->
+    <a routerLink="/new-story">Escribe una historia</a>
 
   </div>
   <div class="u-pull-right">
