--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
     <app-header-bar></app-header-bar>
 </header>
-<div>
+<div class="container">
     <router-outlet></router-outlet>
 </div>
